intellij-plugin/src/main/java/com/lorenzoog/jplank/intellijplugin/parser/PlankParser.java
// This is a generated file. Not intended for manual editing.
package com.lorenzoog.jplank.intellijplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.lorenzoog.jplank.intellijplugin.psi.PlankTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PlankParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return program(b, l + 1);
  }

  /* ********************************************************** */
  // LPAREN ( expr ( COMMA expr ) * ) ? RPAREN
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && arguments_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARGUMENTS, r);
    return r;
  }

  // ( expr ( COMMA expr ) * ) ?
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    arguments_1_0(b, l + 1);
    return true;
  }

  // expr ( COMMA expr ) *
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && arguments_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COMMA expr ) *
  private static boolean arguments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arguments_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean arguments_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET typeDef RBRACKET
  public static boolean arrayTypeDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayTypeDef")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && typeDef(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ARRAY_TYPE_DEF, r);
    return r;
  }

  /* ********************************************************** */
  // ( callExpr DOT ) ? IDENTIFIER EQUAL assignExpr
  //              | equality
  public static boolean assignExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_EXPR, "<assign expr>");
    r = assignExpr_0(b, l + 1);
    if (!r) r = equality(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( callExpr DOT ) ? IDENTIFIER EQUAL assignExpr
  private static boolean assignExpr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignExpr_0_0(b, l + 1);
    r = r && consumeTokens(b, 0, IDENTIFIER, EQUAL);
    r = r && assignExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( callExpr DOT ) ?
  private static boolean assignExpr_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpr_0_0")) return false;
    assignExpr_0_0_0(b, l + 1);
    return true;
  }

  // callExpr DOT
  private static boolean assignExpr_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpr_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = callExpr(b, l + 1);
    r = r && consumeToken(b, DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pointer ( arguments | get ) *
  public static boolean callExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXPR, "<call expr>");
    r = pointer(b, l + 1);
    r = r && callExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( arguments | get ) *
  private static boolean callExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!callExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callExpr_1", c)) break;
    }
    return true;
  }

  // arguments | get
  private static boolean callExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr_1_0")) return false;
    boolean r;
    r = arguments(b, l + 1);
    if (!r) r = get(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // LPAREN ( typeDef ( COMMA typeDef ) * ) ? RPAREN ARROW_LEFT typeDef
  public static boolean callableTypeDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableTypeDef")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && callableTypeDef_1(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, ARROW_LEFT);
    r = r && typeDef(b, l + 1);
    exit_section_(b, m, CALLABLE_TYPE_DEF, r);
    return r;
  }

  // ( typeDef ( COMMA typeDef ) * ) ?
  private static boolean callableTypeDef_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableTypeDef_1")) return false;
    callableTypeDef_1_0(b, l + 1);
    return true;
  }

  // typeDef ( COMMA typeDef ) *
  private static boolean callableTypeDef_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableTypeDef_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = typeDef(b, l + 1);
    r = r && callableTypeDef_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COMMA typeDef ) *
  private static boolean callableTypeDef_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableTypeDef_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!callableTypeDef_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callableTypeDef_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA typeDef
  private static boolean callableTypeDef_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callableTypeDef_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && typeDef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TYPE IDENTIFIER EQUAL LBRACE ( field ( COMMA field ) * ) ? RBRACE SEMICOLON
  public static boolean classDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl")) return false;
    if (!nextTokenIs(b, TYPE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TYPE, IDENTIFIER, EQUAL, LBRACE);
    r = r && classDecl_4(b, l + 1);
    r = r && consumeTokens(b, 0, RBRACE, SEMICOLON);
    exit_section_(b, m, CLASS_DECL, r);
    return r;
  }

  // ( field ( COMMA field ) * ) ?
  private static boolean classDecl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_4")) return false;
    classDecl_4_0(b, l + 1);
    return true;
  }

  // field ( COMMA field ) *
  private static boolean classDecl_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = field(b, l + 1);
    r = r && classDecl_4_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COMMA field ) *
  private static boolean classDecl_4_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_4_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classDecl_4_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classDecl_4_0_1", c)) break;
    }
    return true;
  }

  // COMMA field
  private static boolean classDecl_4_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDecl_4_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && field(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // term ( ( GREATER | GREATER_EQUAL | LESS | LESS_EQUAL ) term ) *
  public static boolean comparison(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARISON, "<comparison>");
    r = term(b, l + 1);
    r = r && comparison_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ( GREATER | GREATER_EQUAL | LESS | LESS_EQUAL ) term ) *
  private static boolean comparison_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comparison_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comparison_1", c)) break;
    }
    return true;
  }

  // ( GREATER | GREATER_EQUAL | LESS | LESS_EQUAL ) term
  private static boolean comparison_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comparison_1_0_0(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // GREATER | GREATER_EQUAL | LESS | LESS_EQUAL
  private static boolean comparison_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, GREATER);
    if (!r) r = consumeToken(b, GREATER_EQUAL);
    if (!r) r = consumeToken(b, LESS);
    if (!r) r = consumeToken(b, LESS_EQUAL);
    return r;
  }

  /* ********************************************************** */
  // letDecl WS *
  //        | funDecl WS *
  //        | nativeFunDecl WS *
  //        | classDecl WS *
  public static boolean decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL, "<decl>");
    r = decl_0(b, l + 1);
    if (!r) r = decl_1(b, l + 1);
    if (!r) r = decl_2(b, l + 1);
    if (!r) r = decl_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // letDecl WS *
  private static boolean decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = letDecl(b, l + 1);
    r = r && decl_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS *
  private static boolean decl_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, WS)) break;
      if (!empty_element_parsed_guard_(b, "decl_0_1", c)) break;
    }
    return true;
  }

  // funDecl WS *
  private static boolean decl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = funDecl(b, l + 1);
    r = r && decl_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS *
  private static boolean decl_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, WS)) break;
      if (!empty_element_parsed_guard_(b, "decl_1_1", c)) break;
    }
    return true;
  }

  // nativeFunDecl WS *
  private static boolean decl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nativeFunDecl(b, l + 1);
    r = r && decl_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS *
  private static boolean decl_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_2_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, WS)) break;
      if (!empty_element_parsed_guard_(b, "decl_2_1", c)) break;
    }
    return true;
  }

  // classDecl WS *
  private static boolean decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = classDecl(b, l + 1);
    r = r && decl_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS *
  private static boolean decl_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_3_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, WS)) break;
      if (!empty_element_parsed_guard_(b, "decl_3_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ELSE expr
  //              | ELSE LBRACE ( stmt * ) ? RBRACE
  public static boolean elseBranch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBranch")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = elseBranch_0(b, l + 1);
    if (!r) r = elseBranch_1(b, l + 1);
    exit_section_(b, m, ELSE_BRANCH, r);
    return r;
  }

  // ELSE expr
  private static boolean elseBranch_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBranch_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ELSE LBRACE ( stmt * ) ? RBRACE
  private static boolean elseBranch_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBranch_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ELSE, LBRACE);
    r = r && elseBranch_1_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( stmt * ) ?
  private static boolean elseBranch_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBranch_1_2")) return false;
    elseBranch_1_2_0(b, l + 1);
    return true;
  }

  // stmt *
  private static boolean elseBranch_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBranch_1_2_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elseBranch_1_2_0", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // comparison ( ( EQUAL_EQUAL | BANG_EQUAL ) comparison ) *
  public static boolean equality(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equality")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EQUALITY, "<equality>");
    r = comparison(b, l + 1);
    r = r && equality_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ( EQUAL_EQUAL | BANG_EQUAL ) comparison ) *
  private static boolean equality_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equality_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!equality_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "equality_1", c)) break;
    }
    return true;
  }

  // ( EQUAL_EQUAL | BANG_EQUAL ) comparison
  private static boolean equality_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equality_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = equality_1_0_0(b, l + 1);
    r = r && comparison(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EQUAL_EQUAL | BANG_EQUAL
  private static boolean equality_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equality_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, EQUAL_EQUAL);
    if (!r) r = consumeToken(b, BANG_EQUAL);
    return r;
  }

  /* ********************************************************** */
  // assignExpr
  //        | ifExpr
  //        | instanceExpr
  //        | sizeofExpr
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = assignExpr(b, l + 1);
    if (!r) r = ifExpr(b, l + 1);
    if (!r) r = instanceExpr(b, l + 1);
    if (!r) r = sizeofExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr SEMICOLON
  public static boolean exprStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exprStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_STMT, "<expr stmt>");
    r = expr(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // unary ( ( STAR | SLASH ) unary ) *
  public static boolean factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FACTOR, "<factor>");
    r = unary(b, l + 1);
    r = r && factor_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ( STAR | SLASH ) unary ) *
  private static boolean factor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!factor_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "factor_1", c)) break;
    }
    return true;
  }

  // ( STAR | SLASH ) unary
  private static boolean factor_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = factor_1_0_0(b, l + 1);
    r = r && unary(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STAR | SLASH
  private static boolean factor_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, SLASH);
    return r;
  }

  /* ********************************************************** */
  // MUTABLE ? parameter
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    if (!nextTokenIs(b, "<field>", IDENTIFIER, MUTABLE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = field_0(b, l + 1);
    r = r && parameter(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // MUTABLE ?
  private static boolean field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_0")) return false;
    consumeToken(b, MUTABLE);
    return true;
  }

  /* ********************************************************** */
  // funHeader LBRACE stmt * RBRACE
  public static boolean funDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funDecl")) return false;
    if (!nextTokenIs(b, FUN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = funHeader(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && funDecl_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, FUN_DECL, r);
    return r;
  }

  // stmt *
  private static boolean funDecl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funDecl_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "funDecl_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // FUN IDENTIFIER LPAREN ( parameter ( COMMA parameter ) * ) ? RPAREN COLON typeDef
  public static boolean funHeader(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funHeader")) return false;
    if (!nextTokenIs(b, FUN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FUN, IDENTIFIER, LPAREN);
    r = r && funHeader_3(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, COLON);
    r = r && typeDef(b, l + 1);
    exit_section_(b, m, FUN_HEADER, r);
    return r;
  }

  // ( parameter ( COMMA parameter ) * ) ?
  private static boolean funHeader_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funHeader_3")) return false;
    funHeader_3_0(b, l + 1);
    return true;
  }

  // parameter ( COMMA parameter ) *
  private static boolean funHeader_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funHeader_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameter(b, l + 1);
    r = r && funHeader_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COMMA parameter ) *
  private static boolean funHeader_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funHeader_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!funHeader_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "funHeader_3_0_1", c)) break;
    }
    return true;
  }

  // COMMA parameter
  private static boolean funHeader_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "funHeader_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && parameter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // APHOSTROPHE IDENTIFIER
  public static boolean genericAccessTypeDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericAccessTypeDef")) return false;
    if (!nextTokenIs(b, APHOSTROPHE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, APHOSTROPHE, IDENTIFIER);
    exit_section_(b, m, GENERIC_ACCESS_TYPE_DEF, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER LESS ( typeDef ( COMMA typeDef ) * ) ? GREATER
  public static boolean genericTypeDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericTypeDef")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, LESS);
    r = r && genericTypeDef_2(b, l + 1);
    r = r && consumeToken(b, GREATER);
    exit_section_(b, m, GENERIC_TYPE_DEF, r);
    return r;
  }

  // ( typeDef ( COMMA typeDef ) * ) ?
  private static boolean genericTypeDef_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericTypeDef_2")) return false;
    genericTypeDef_2_0(b, l + 1);
    return true;
  }

  // typeDef ( COMMA typeDef ) *
  private static boolean genericTypeDef_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericTypeDef_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = typeDef(b, l + 1);
    r = r && genericTypeDef_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
